   + isGUallowed() : returns bpGUallowed
 * IntaRNA/RnaSequence :
   + bpGUcodes : base pair codes for GU and UG
   + isGU() : tests whether or not two positions can form a GU base pair
 * IntaRNA/InteractionEnergy :
   + isGU() : tests whether or not two positions can form a GU base pair
 * IntaRNA/SeedHandler :
   * isFeasibleSeedBasePair() :
     + check if GU base pair are allowed or not
 * CommandLineParsing :
   + helixMinPu : minimal unpaired probability (per sequence) of considered
     helices (to make interface analogously to seed constraints)
   - helixMaxED : replaced by helixMinPu
   + seedNoGU : if present, GU base pairs are not allowed within seeds
 * README.md :
   + seedNoGU
   + helixMinPu
   - helixMaxED
   * figure links corrected (to be working within github pages) 

190306 Martin Raden :
 * README.md :
   + helix constraints documented
 * IntaRNA/HelixHandlerUnpaired :
   * adaptation to HelixConstraint::evalFullE() semantics
 * bin/CommandLineParsing :
   + helixFullE : replaces helixNoED
   - helixNoED : replaced by helixFullE
   * model : renamed 'L' to 'B' since only using blocks of stable helices
 * renaming Predictor*MaxHelix* to Predictor*HelixBlock*
 * IntaRNA/SeedHandler :
   + updateToNextSeed() : generic seed iteration functionality
 * IntaRNA/SeedHandlerIdxOffset :
 * IntaRNA/SeedHandlerExplicit :
 * IntaRNA/SeedHandlerNoBulge :
   + updateToNextSeed() : specialized seed iteration functionality
 * IntaRNA/SeedHandlerIdxOffset :
   + deleteOnDestruction : whether or not the original seedhandler is to be 
     deleted within the destructor
   * destructor() :
     + check for deleteOnDestruction
   * constructor( +deleteOnDestruction = true ) :
     + deleteOnDestruction init

190305 Martin Raden :
 * IntaRNA/PredictorMfe2d :
   * fillHybridE() : 
     + explicit initialization (formerly done via initHybridE)
     * now virtual and to be overwritten by subclasses
   - initHybridE() : obsolete
   - hybridErange : obsolete